cleanup maven and finally finish build mojo